saves/test/demo_full_20240802_193545/hadd/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp hadd_tb.v hadd.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
hadd_tb.v:60: $finish called at 8000 (1ps)

iverilog cmd 2 error:

